Increase the min height slightly, to avoid shifting

--- a/css/layout.css
+++ b/css/layout.css
@@ -93,7 +93,7 @@ header, section, footer {
     	display: block;
     	height: auto;
     	min-width: 0;
-    	min-height: 20px;
+    	min-height: 22px;
     	text-align: left;
     	padding-left: 0;
     	padding-bottom: 0;
